--- a/vignettes/CENFA-vignette.Rmd
+++ b/vignettes/CENFA-vignette.Rmd
@@ -21,7 +21,7 @@ library(CENFA)
 
 `Version: 0.1.0`
 
-`Date: 2018-1-26`
+`Date: 2018-1-31`
 
 `Author: D. Scott Rinnan`
 
@@ -224,15 +224,15 @@ mat <- parCov(x = climdat.hist, y = climdat.fut, parallel = TRUE, n = 4)
 
 ### `stretchPlot`
 
-The `stretchPlot` function provides a simple way to adjust the contrast of plots of 
-RasterLayers to emphasize difference in values. It can perform histogram 
+The `stretchPlot` function provides a simple way to adjust the contrast of plots 
+of RasterLayers to emphasize difference in values. It can perform histogram 
 equalization and standard deviation stretching.
 
 ```{r "stretchPlot", fig.width=8, fig.height = 5}
 sm <- sensitivity_map(mod.cnfa)
 par(mfrow = c(1, 3), oma = c(1,1,1,1))
-stretchPlot(sm, main = "Linear")
-stretchPlot(sm, type = "stretch", main = "Histogram equalization")
+stretchPlot(sm, main = "linear")
+stretchPlot(sm, type = "hist.equal", main = "Histogram equalization")
 stretchPlot(sm, type = "sd", n = 2, main = "Standard deviation (n = 2)")
 ```
 
