Recompiled after updates.

--- a/vignettes/CENFA-vignette.Rmd
+++ b/vignettes/CENFA-vignette.Rmd
@@ -19,13 +19,13 @@ library(CENFA)
 ```
 # An introduction to the `CENFA` package
 
-`Version: 0.1.0`
+`Version: 0.1.0.9000`
 
-`Date: 2018-1-31`
+`Date: 2018-10-8`
 
 `Author: D. Scott Rinnan`
 
-`Maintainer: D. Scott Rinnan <rinnan@u.washington.edu>`
+`Maintainer: D. Scott Rinnan <scott.rinnan@yale.edu>`
 
 ## Introduction
 
@@ -34,11 +34,11 @@ and climate-niche factor analysis (CNFA). This package was created with three
 goals in mind:
 
 - To update the ENFA method for use with large datasets and modern data formats.
-- To correct a critical error in the ENFA method itself, that has managed to 
-  persist since Hirzel et al. first introduced ENFA in 2002.
 - To expand the application of ENFA in the context of climate change in order to 
   quantify different aspects of species vulnerability to climate change, and to 
   facilitate quantitative comparisons of vulnerability between species.
+- To correct a minor error in the ENFA method itself, that has persisted in the
+  literature since Hirzel et al. first introduced ENFA in 2002.
 
 `CENFA` takes advantage of the `raster` and `sp` packages, allowing the user to 
 conduct analyses directly with raster, shapefile, and point data, and to handle 
