--- a/vignettes/CENFA-vignette.Rmd
+++ b/vignettes/CENFA-vignette.Rmd
@@ -13,8 +13,8 @@ knitr::opts_chunk$set(
   fig.width = 6,
   fig.height = 4
 )
-library(raster)
-library(sp)
+# library(raster)
+# library(sp)
 library(CENFA)
 ```
 # An introduction to the `CENFA` package
