--- a/vignettes/CENFA-vignette.Rmd
+++ b/vignettes/CENFA-vignette.Rmd
@@ -19,9 +19,9 @@ library(CENFA)
 ```
 # An introduction to the `CENFA` package
 
-`Version: 0.1.1.0`
+`Version: 1.1.1`
 
-`Date: 2019-12-16`
+`Date: 2021-07-26`
 
 `Author: D. Scott Rinnan`
 
@@ -237,6 +237,10 @@ stretchPlot(sm, type = "sd", n = 2, main = "Standard deviation (n = 2)")
 ```
 
 ## References
+
+Rinnan, D. Scott and Lawler, Joshua. Climate-niche factor analysis: a spatial
+approach to quantifying species vulnerability to climate change. Ecography (2019):
+<doi:10.1111/ecog.03937>.
 
 Basille, Mathieu, et al. Assessing habitat selection using multivariate
 statistics: Some refinements of the ecological-niche factor analysis. Ecological
