--- a/vignettes/CENFA-vignette.Rmd
+++ b/vignettes/CENFA-vignette.Rmd
@@ -2,7 +2,7 @@
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Introduction to the 'CENFA' package}
-  %\VignetteEngine{knitr::knitr}
+  %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
 
